[project]
name = "seeda_formatter"
version = "0.1.0"
description = "Scripts for easy handling of SEEDA edit-level annotations."
readme = "README.md"
authors = [
    { name = "gotuiyan" }
]
requires-python = ">=3.11.0"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.8.4",
]
